crates/toml_edit/tests/snapshots/invalid/array/no-close-06.stderr
TOML parse error at line 1, column 26
  |
1 | no-close-06 = [{ key = 42 #}]
  |                          ^
unclosed inline table, expected `}`
